core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__show_measurements_statement-3.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"SHOW MEASUREMENTS WITH MEASUREMENT = \\\"cpu\\\"\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_measurements_statement
- pre_visit_with_measurement_clause
- pre_visit_qualified_measurement_name
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_qualified_measurement_name
- post_visit_with_measurement_clause
- post_visit_show_measurements_statement
- post_visit_statement
