core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__show_measurements_statement-4.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"SHOW MEASUREMENTS WHERE host = 'west'\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_measurements_statement
- pre_visit_where_clause
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_literal
- post_visit_literal
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_where_clause
- post_visit_show_measurements_statement
- post_visit_statement
