core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__show_retention_policies_statement-2.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"SHOW RETENTION POLICIES ON telegraf\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_retention_policies_statement
- pre_visit_on_clause
- post_visit_on_clause
- post_visit_show_retention_policies_statement
- post_visit_statement
