core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__show_tag_keys_statement-2.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"SHOW TAG KEYS ON telegraf FROM cpu WHERE host = \\\"west\\\" LIMIT 5 OFFSET 10\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_tag_keys_statement
- pre_visit_on_clause
- post_visit_on_clause
- pre_visit_show_from_clause
- pre_visit_qualified_measurement_name
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_qualified_measurement_name
- post_visit_show_from_clause
- pre_visit_where_clause
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_where_clause
- pre_visit_limit_clause
- post_visit_limit_clause
- pre_visit_offset_clause
- post_visit_offset_clause
- post_visit_show_tag_keys_statement
- post_visit_statement
